deploy: 4088bae2c978a09c3859ef99ba47cc9f2e4d432a

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Popular posts
 <div class=pinned-item-list-item-content>
 <div class="d-flex width-full flex-items-center position-relative"><svg class="octicon octicon-repo mr-2 text-gray flex-shrink-0" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M2 2.5A2.5 2.5.0 014.5.0h8.75a.75.75.0 01.75.75v12.5a.75.75.0 01-.75.75h-2.5a.75.75.0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75.0 01-1.072 1.05A2.495 2.495.0 012 11.5v-9zm10.5-1V9h-8c-.356.0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25.0 00.4.2l1.45-1.087a.25.25.0 01.3.0L8.6 15.7a.25.25.0 00.4-.2v-3.25A.25.25.0 008.75 12h-3.5a.25.25.0 00-.25.25z"/></svg>
 <a class="text-bold flex-auto min-width-0" href=https://kiyo27.github.io/post/all-aws-certifications/>
-<span class=repo title="All 11 AWS certifications">All 11 AWS certifications</span>
+<span class=repo title=AWS認定全冠(11冠)達成>AWS認定全冠(11冠)達成</span>
 </a>
 </div>
 <div name=summary class="pinned-item-desc text-gray text-small d-block mt-2 mb-3">
@@ -242,7 +242,7 @@ aws
 </div>
 <div class="mt-4 position-relative" id=contributions data='[
 {
-  "title": "All%2011%20AWS%20certifications",
+  "title": "AWS%e8%aa%8d%e5%ae%9a%e5%85%a8%e5%86%a0%2811%e5%86%a0%29%e9%81%94%e6%88%90",
   "link": "https://kiyo27.github.io/post/all-aws-certifications/",
   "publishDate": "2021-12-21%2001:13:31"
 }
